--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple eCommerce</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <!-- section -1 -->
+      <section class="section-1">
+        <!-- logo -->
+        <a href="#" class="logo">
+          <i class="fab fa-apple"></i>
+        </a>
+        <!-- end of logo -->
+
+        <!-- navbar -->
+        <nav class="naber">
+          <a href="#" class="navbar-link">Iphone 12</a>
+          <a href="#" class="navbar-link">Macbook Air</a>
+          <a href="#" class="navbar-link">Watch</a>
+          <a href="#" class="navbar-link">AirPods</a>
+        </nav>
+        <!-- end od navbar -->
+
+        <!-- Banner -->
+        <div class="section-1-banner">
+          <h1>&#8592;Best Gift</h1>
+          <p>Createivity is just connecting things</p>
+          <span>-Steve Jobs</span>
+          <button>Buy Now</button>
+        </div>
+
+        <!-- end of banner -->
+      </section>
+    </div>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
