--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- end of logo -->
 
         <!-- navbar -->
-        <nav class="naber">
+        <nav class="navbar">
           <a href="#" class="navbar-link">Iphone 12</a>
           <a href="#" class="navbar-link">Macbook Air</a>
           <a href="#" class="navbar-link">Watch</a>
@@ -30,7 +30,7 @@
         <!-- end od navbar -->
 
         <!-- Banner -->
-        <div class="section-1-banner">
+        <div class="section-1-banner center">
           <h1>&#8592;Best Gift</h1>
           <p>Createivity is just connecting things</p>
           <span>-Steve Jobs</span>
@@ -38,6 +38,11 @@
         </div>
 
         <!-- end of banner -->
+
+        <!-- slideshow -->
+        <div class="slideshow"></div>
+
+        <!-- end of slideshow -->
       </section>
     </div>
 
