--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
         </div>
 
         <!-- end of cube -->
+        <!-- ctrols for cube -->
+
+        <div class="controls">
+          <a href="" ><i class="fas fa-arrow-up top-x-control"></i>></i></a>
+          <a href="" ><i class="fas fa-arrow-down top-x-control"></i>></i></a>
+        </div>
+
+        <!-- end of controlls for cube -->
 
         <!-- Banner -->
         <div class="section-1-banner center">
