--- a/index.html
+++ b/index.html
@@ -40,15 +40,29 @@
               <i class="fab fa-apple"></i>
             </div>
           </div>
+
+          <div class="controls">
+            <a href="" class="top-x-control"><i class="fas fa-arrow-up"></i></a>
+            <a href="" class="bottom-x-control"
+              ><i class="fas fa-arrow-down"></i
+            ></a>
+            <a href="" class="left-y-control"
+              ><i class="fas fa-arrow-left"></i
+            ></a>
+            <a href="" class="right-y-control"
+              ><i class="fas fa-arrow-right"></i
+            ></a>
+            <a href="" class="top-z-control"
+              ><i class="fas fa-arrow-down"></i
+            ></a>
+            <a href="" class="bottom-z-control"
+              ><i class="fas fa-arrow-up"></i
+            ></a>
+          </div>
         </div>
 
         <!-- end of cube -->
         <!-- ctrols for cube -->
-
-        <div class="controls">
-          <a href="" ><i class="fas fa-arrow-up top-x-control"></i>></i></a>
-          <a href="" ><i class="fas fa-arrow-down top-x-control"></i>></i></a>
-        </div>
 
         <!-- end of controlls for cube -->
 
